fix: add slider wrapper for overflow handling

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -38,8 +38,49 @@ a, a:visited {
     color: inherit;
     text-decoration: none;
 }
+h1 {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 150%; /* 48px */
+    letter-spacing: 5.76px;
+    text-transform: uppercase;
+    color: var(--Static-White, #FFF);
+}
+h2 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 152%; /* 36.48px */
+    letter-spacing: 3.84px;
+    text-transform: uppercase;
+}
+.btn {
+    display: flex;
+    padding: 20px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: var(--Space-0, 0);
+    border-radius: 20px;
+    background-color: var(--Dark, #181C29);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 130%; /* 15.6px */
+    letter-spacing: 0.6px;
+    text-transform: uppercase;
+    color: var(--Static-White, #FFF);
+}
 li {
     list-style: none;
+}
+.caption {
+    font-family: Allura;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 24px */
+    letter-spacing: 1.2px;
 }
 .container {
     max-width: 1276px;
@@ -107,15 +148,18 @@ li {
 .main {
     background-color: var(--primary);
 }
+/* Hero */
 .hero {
     background-image: url(assets/bg-ball.png),
                     url(assets/bg-snow.png);
     background-size:
-        contain,
+        1440px auto,
         cover;
     background-repeat: no-repeat;
-    background-position: top center, center;
-    min-height: 100vh;
+    background-position: top center, bottom center;
+    max-width: 1920px;
+    width: 100%;
+    height: 546px;
 }
 .hero__content {
     display: flex;
@@ -124,31 +168,74 @@ li {
     justify-content: center;
     padding-top: 120px;
 }
-.hero__caption {
+.hero__caption,
+.text__caption {
+    color: #FFF;
 }
 .hero__headline {
+    margin-top: 14px;
+    max-width: 430px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
 }
 .hero__btn {
+    margin-bottom: 12px;
 }
-.text__caption {
-}
+/* About */
+
 .about {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 38px;
+    margin-bottom: 60px;
+}
+.about__wrapper {
+    display: flex;
+    flex-direction: row;
+    max-width: 1276px;
+    padding: var(--Space-0, 0);
+    align-items: center;
+    border-radius: 20px;
+    background: #FFF;
+    max-height: 528px;
+    height: 100%;
 }
 .text__wrapper {
+    padding: var(--Space-0, 0) var(--Space-60, 60px);
+    flex-direction: column;
 }
 .about__caption {
+    color: var(--Primary, #FF4646);
+    margin-bottom: 24px;
 }
 .about__headline {
+    margin-bottom: 34px;
 }
 .about__description {
+    max-width: 426px;
+    width: 100%;
+    margin-top: 0;
 }
 .about__img {
+    max-height: 528px;
+    height: 100%;
 }
 .about__photo {
+    border-radius: 20px;
 }
+/* Slider */
 .slider {
+    display: flex;
+    padding: var(--Space-60, 60px) var(--Space-8, 8px);
+    flex-direction: column;
+    align-items: center;
 }
 .text__content {
+    color: var(--Static-White, #FFF);
+    text-align: center;
 }
 .slider__caption {
 }
